posiGen_FullsendBox/src/objects/Lease__c.object
<CustomObject>
    <fields>
        <fullName>Account_Receivables_Outstanding__c</fullName>
        <formula>LD_Lease__r.A_R_Outstanding__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Receivables Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leases</relationshipLabel>
        <relationshipName>Leases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Activate_on_FA_On_Date__c</fullName>
        <label>Activate on FA On Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alpha_Code__c</fullName>
        <formula>LD_Lease__r.Alpha_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alpha Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Past_Due_121_150_Days__c</fullName>
        <formula>LD_Lease__r.Past_Due121_150__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Past Due 121-150 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Past_Due_151_180_Days__c</fullName>
        <formula>LD_Lease__r.Past_Due151_180__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Past Due 151-180 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Past_Due_1_30_Days__c</fullName>
        <formula>LD_Lease__r.Past_Due1_30__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Past Due 1-30 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Past_Due_Over_180_Days__c</fullName>
        <formula>LD_Lease__r.Past_Due_Over180__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Past Due Over 180 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant_Email_Address__c</fullName>
        <label>Applicant E-mail Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Routing_Number__c</fullName>
        <label>Bank Routing Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Contact_Name__c</fullName>
        <label>Bill To Contact Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Contact_Phone__c</fullName>
        <label>Bill To Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bill_to_Contact_E_mail__c</fullName>
        <label>Bill to Contact E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billed_AR__c</fullName>
        <formula>Original_Loan_Amount_F__c -  Unbilled_Lease_Balance_F__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billed AR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip__c</fullName>
        <label>Billing Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Boarding_Status__c</fullName>
        <label>Boarding Status</label>
        <picklist>
            <picklistValues>
                <fullName>Research Before Boarding</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Need to Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Board: Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Board: Not Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research: May Be Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research: Not in FA only SF Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upload to LD (based on CAO File)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Board: Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Board: Write-Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Book_Date__c</fullName>
        <formula>LD_Lease__r.Book_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_Date__c</fullName>
        <description>Date uploaded to LMS.</description>
        <label>Booking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Borrower_Business_Phone_Number__c</fullName>
        <label>Borrower Business Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Borrower_Phone_Number__c</fullName>
        <label>Borrower Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CAO_Monthly_Payment__c</fullName>
        <label>CAO Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CAO_Original_Loan_Amount__c</fullName>
        <label>CAO Original Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CAO_Principal_Balance__c</fullName>
        <label>CAO Principal Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CAO_vs_SF_Monthly_Payment__c</fullName>
        <formula>CAO_Monthly_Payment__c -  Monthly_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAO vs SF Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CAO_vs_SF_Original_Loan_Amount__c</fullName>
        <formula>CAO_Original_Loan_Amount__c -  Original_Loan_Amount_F__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAO vs SF Original Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CAO_vs_SF_Principal_Balance__c</fullName>
        <formula>CAO_Principal_Balance__c -  Principal_Balance_0531__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAO vs SF Principal Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Recd_0531__c</fullName>
        <label>Cash Recd 0531</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_vs_Lease_Balance__c</fullName>
        <formula>Paid_plus_Past_Due__c -  Billed_AR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash vs Lease Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Co_Borrower_Business_Phone_Number__c</fullName>
        <label>Co Borrower Business Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Co_Borrower_Home_Phone_Number__c</fullName>
        <label>Co Borrower Home Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Co_Lessee_Address_City__c</fullName>
        <label>Co Lessee Address City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Lessee_Address_State__c</fullName>
        <label>Co Lessee Address State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Lessee_Address_Street__c</fullName>
        <label>Co Lessee Address Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Lessee_Address_Zip__c</fullName>
        <label>Co Lessee Address Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Lessee_Date_of_Birth__c</fullName>
        <label>Co Lessee Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Co_Lessee_SSN__c</fullName>
        <label>Co Lessee SSN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commencement_Date__c</fullName>
        <label>Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_per_Watt_Escalation_Percentage__c</fullName>
        <label>Cost per Watt Escalation Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Count_of_Leases_on_Related_Opp__c</fullName>
        <formula>Opportunity__r.Number_of_Leases__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Leases on Related Opp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_last_payment__c</fullName>
        <formula>LD_Lease__r.Next_Pay_Due_Dte__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of last payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Delinquent__c</fullName>
        <formula>LD_Lease__r.Days_Delinquent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Delinquent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Past_Due_0531__c</fullName>
        <label>Days Past Due 0531</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Past_Due__c</fullName>
        <label>Past Due Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deferment_Reason__c</fullName>
        <label>Deferment Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deferral_End_Date__c</fullName>
        <label>Deferral End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deferral_Start_Date__c</fullName>
        <label>Deferral Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_of_Last_Fully_Paid_Invoice__c</fullName>
        <label>Due Date of Last Fully Paid Invoice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Day__c</fullName>
        <formula>LD_Lease__r.Due_Day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EE_Monthly_Payment__c</fullName>
        <formula>IF( Has_Energy_Efficiency__c = &apos;Y&apos;, 10, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Electricity_Provider__c</fullName>
        <label>Electricity Provider</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Efficiency_Outstanding__c</fullName>
        <formula>Principal_Outstanding__c *  EE_Monthly_Payment__c  / Monthly_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Energy Efficiency Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Equipment</label>
        <picklist>
            <picklistValues>
                <fullName>4 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.7 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.6 kw</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_PBI_Rate__c</fullName>
        <label>Estimated PBI Rate</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Rebate_Amount_in_Dollars__c</fullName>
        <label>Estimated Rebate Amount in Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <formula>LD_Lease__r.Expiration_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FA_Original_Loan_Amount__c</fullName>
        <label>FA Original Loan Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FA_Payments_Made__c</fullName>
        <label>FA Payments Made</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FA_Payments_Remaining__c</fullName>
        <label>FA Payments Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FA_Principal_Balance__c</fullName>
        <label>FA Principal Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fair_Market_Value__c</fullName>
        <formula>Gross_System_Cost_in_Dollars__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fair Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fees_Balance__c</fullName>
        <label>Fees Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fees_Outstanding__c</fullName>
        <formula>Fees_Balance__c +  Late_Charges_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fees Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Option_Code__c</fullName>
        <label>Finance Option Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Type__c</fullName>
        <label>Finance Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financing_Bill_Payment_Option__c</fullName>
        <label>Financing Bill Payment Option</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Payment_Due_Date2__c</fullName>
        <formula>LD_Lease__r.X1st_Pmt_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Payment_Due_Date__c</fullName>
        <label>First Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <label>Fund</label>
        <picklist>
            <picklistValues>
                <fullName>RENEWABLE ENERGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RENEWABLE ENERGY II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RENEWABLE ENERGY - US BNK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funding_Tranche__c</fullName>
        <label>Funding Tranche</label>
        <picklist>
            <picklistValues>
                <fullName>ITC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_System_Cost_in_Dollars__c</fullName>
        <label>Gross System Cost in Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Has_Energy_Efficiency__c</fullName>
        <label>Has Energy Efficiency?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Payment_in_Dollars__c</fullName>
        <label>Initial Payment in Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Installation_City__c</fullName>
        <label>Installation City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_ID__c</fullName>
        <label>Installation ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_State__c</fullName>
        <label>Installation State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Street_Address__c</fullName>
        <label>Installation Street Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Zip__c</fullName>
        <label>Installation Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interconnection_Date__c</fullName>
        <label>Interconnection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inverter_Make_Model__c</fullName>
        <label>Inverter Make &amp; Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Serial_Number_from_System__c</fullName>
        <label>Inverter Serial Number from System</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joint_Applicant_First_Name__c</fullName>
        <label>Joint Applicant First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joint_Applicant_Last_Name__c</fullName>
        <label>Joint Applicant Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joint_Applicant_Middle_Name__c</fullName>
        <label>Joint Applicant Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LD_Lease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LD Lease</label>
        <referenceTo>LD_Lease__c</referenceTo>
        <relationshipLabel>Leases</relationshipLabel>
        <relationshipName>Leases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LMS_Account_Number__c</fullName>
        <externalId>true</externalId>
        <label>LMS Account Number</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Late_Charges_Balance__c</fullName>
        <label>Late Charges Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Start_Date__c</fullName>
        <label>Lease Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Term__c</fullName>
        <description>Length of Lease In Months</description>
        <label>Lease Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Class_1__c</fullName>
        <label>Loan Class 1</label>
        <picklist>
            <picklistValues>
                <fullName>JEFFERSON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEFFERSON SOLAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JP SOLAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEW ORLEANS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTHSHORE SOLAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO SOLAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ORLEANS SOLAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUNLIGHT POWER MY HOME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPTOWN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Class_II__c</fullName>
        <label>Loan Class II</label>
        <picklist>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITC Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Thermal I</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ManuaNum_of_Unbilled_Payments_as_of_0531__c</fullName>
        <label>Manual_# of Unbilled Payments as of 0531</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Module_Count__c</fullName>
        <description>This comes from Module Count (System Number of Panels) on the Opportunity</description>
        <inlineHelpText>This comes from Module Count (System Number of Panels) on the Opportunity</inlineHelpText>
        <label>Module Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module_Description__c</fullName>
        <description>Module Description (System Item Desc) is the Opportunity field</description>
        <inlineHelpText>Module Description (System Item Desc) is the Opportunity field</inlineHelpText>
        <label>Module Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_ACH_Fee_in_Dollars__c</fullName>
        <label>Monthly ACH Fee in Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment_Base_EE__c</fullName>
        <formula>Monthly_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Payment (Base + EE)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment_Minus_EE__c</fullName>
        <formula>Monthly_Payment__c  -  EE_Monthly_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Payment Minus EE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment__c</fullName>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Principal_Billing_Date__c</fullName>
        <label>Next Principal Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Cash_Recd_0531__c</fullName>
        <label>Non-Cash Recd 0531</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Num_of_Billed_Payments_Thru_0531__c</fullName>
        <label># of Billed Payments Thru 0531</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Unbilled_Payments__c</fullName>
        <label># of Unbilled Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Unbilled_Payments_as_of_0531__c</fullName>
        <formula>Lease_Term__c -  Num_of_Billed_Payments_Thru_0531__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Unbilled Payments as of 0531</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numeric_ID__c</fullName>
        <displayFormat>10-{00000}</displayFormat>
        <externalId>true</externalId>
        <label>Numeric ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_Numeric_ID__c</fullName>
        <formula>VALUE( Opportunity__r.Numeric_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Numeric ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Leases</relationshipLabel>
        <relationshipName>Leases_Sold</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Orig_Term_Greater_Than_Rem_Term__c</fullName>
        <formula>Lease_Term__c &gt;= Rem_Term_Based_on_Unbill_div_Mon_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Orig Term Greater Than Rem Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Balance_Greater_Than_Unbilled__c</fullName>
        <formula>Original_Loan_Amount_F__c &gt;=  Unbilled_Lease_Balance_F__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Balance Greater Than Unbilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Loan_Amount_F__c</fullName>
        <formula>Lease_Term__c *  (Monthly_Payment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Loan Amount (F)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Payments__c</fullName>
        <formula>LD_Lease__r.Original_Pmts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PVI_First_Production_Date__c</fullName>
        <formula>Opportunity__r.PVI_First_Production_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PVI First Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PVI_Net_Meter_Install_Date__c</fullName>
        <formula>Opportunity__r.PVI_Net_Meter_Install_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PVI Net Meter Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PV_Installer__c</fullName>
        <label>PV Installer</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_plus_Past_Due__c</fullName>
        <formula>Rental_Amount_Outstanding_Including_Sale__c +  Energy_Efficiency_Outstanding__c +  Total_Cash_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid + Past Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pay_via_ACH__c</fullName>
        <description>Y/N</description>
        <label>Pay via ACH</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Year10__c</fullName>
        <formula>IF(Lease_Term__c  &lt;=  108, 0, Monthly_Payment_Minus_EE__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Amount Year 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Year11__c</fullName>
        <formula>IF(Lease_Term__c  &lt;=  120, 0, Monthly_Payment_Minus_EE__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Amount Year 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Year12__c</fullName>
        <formula>IF(Lease_Term__c &lt;= 132, 0, Monthly_Payment_Minus_EE__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Amount Year 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Inclusive_of_Tax__c</fullName>
        <formula>&apos;Y&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Inclusive of Tax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <formula>&apos;Lease&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Verification__c</fullName>
        <formula>(Payment_Amount_Year1__c + Payment_Amount_Year2__c + Payment_Amount_Year3__c + Payment_Amount_Year4__c + Payment_Amount_Year5__c + Payment_Amount_Year6__c + Payment_Amount_Year7__c + Payment_Amount_Year8__c + Payment_Amount_Year9__c + Payment_Amount_Year10__c + Payment_Amount_Year11__c + Payment_Amount_Year12__c + Payment_Amount_Year13__c + Payment_Amount_Year14__c + Payment_Amount_Year15__c + Payment_Amount_Year16__c + Payment_Amount_Year17__c + Payment_Amount_Year18__c + Payment_Amount_Year19__c + Payment_Amount_Year20__c) - ( Lease_Term__c *  Monthly_Payment__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Verification</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Applicant_Date_of_Birth__c</fullName>
        <inlineHelpText>Lessee DOB</inlineHelpText>
        <label>Primary Applicant Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Applicant_First_Name__c</fullName>
        <label>Primary Applicant First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>